<resources>
    <string name="app_name">BloodBank</string>
    <string name="registater_form">Registration Form</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="district">District</string>
    <string name="Upazila">Upazila</string>
    <string name="password">Password</string>
    <string name="conferm_password">Confirm Password</string>
    <string name="register_me">Register Me</string>
    <string name="bloodgroup">Blood Group</string>
    <string name="don_t_have_account_click">Don\'t have account! Click  </string>
    <string name="sign_up"> Sign Up!</string>
    <string name="login">LOGIN</string>
    <string name="loginLink">https://mined-human.000webhostapp.com/login.php</string>
    <string name="regLink">https://mined-human.000webhostapp.com/insertData.php</string>
    <string name="division">Division</string>
    <string name="search">Search</string>
    <string name="division_default_any">Division [default any]</string>
    <string name="district_deafault_any">District [dafault any]</string>
    <string name="upazila_default_any">Upazila [default any]</string>
    <string name="why_donate_blood">Why Donate Blood?</string>
    <string name="my_profile">My Profile</string>
    <string name="last_donation_date">Last Donation Date</string>
    <string name="blood_needed">Blood Needed?</string>
    <string name="about_us">About Us</string>
    <string name="address">Address</string>
    <string name="name">Name :</string>
    <string name="phone">Phone:</string>
    <string name="emailAddress">Email :</string>
    <string name="bloodgroupInfo">Bloodgroup:</string>
    <string name="icon">Icon</string>
    <string name="why_donate">Blood is the most precious gift that anyone can give to another person — the gift of life.</string>
    <string-array name="bgroups">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="divisions">
        <item>Barisal</item>
        <item>Chittagong</item>
        <item>Dhaka</item>
        <item>Khulna</item>
        <item>Mymensingh</item>
        <item>Rajshahi</item>
        <item>Rangpur</item>
        <item>Sylhet</item>
    </string-array>
    <string-array name="districts_of_borisal">
        <item>Barguna</item>
        <item>Barisal</item>
        <item>Bhola</item>
        <item>Jhalokati</item>
        <item>Patuakhali</item>
        <item>Pirojpur</item>
    </string-array>
    <string-array name="districts_of_chittagong">
        <item>Bandarban</item>
        <item>Brahmanbaria</item>
        <item>Chandpur</item>
        <item>Chittagong</item>
        <item>Comilla</item>
        <item>Cox\'s Bazar</item>
        <item>Feni</item>
        <item>Khagrachhari</item>
        <item>Lakshmipur</item>
        <item>Noakhali</item>
        <item>Rangamati</item>
    </string-array>
    <string-array name="districts_of_dhaka">
        <item>Dhaka</item>
        <item>Faridpur</item>
        <item>Gazipur</item>
        <item>Gopalganj</item>
        <item>Kishoreganj</item>
        <item>Madaripur</item>
        <item>Manikganj</item>
        <item>Munshiganj</item>
        <item>Narayanganj</item>
        <item>Narsingdi</item>
        <item>Rajbari</item>
        <item>Shariatpur</item>
        <item>Tangail</item>
    </string-array>
    <string-array name="districts_of_khulna">
        <item>Bagerhat</item>
        <item>Chuadanga</item>
        <item>Jessore</item>
        <item>Jhenaidah</item>
        <item>Khulna</item>
        <item>Kushtia</item>
        <item>Magura</item>
        <item>Meherpur</item>
        <item>Narail</item>
        <item>Satkhira</item>
    </string-array>
    <string-array name="districts_of_mymensingh">
        <item>Jamalpur</item>
        <item>Mymensingh</item>
        <item>Netrakona</item>
        <item>Sherpur</item>
    </string-array>
    <string-array name="districts_of_rajshahi">
        <item>Bogra</item>
        <item>Joypurhat</item>
        <item>Naogaon</item>
        <item>Natore</item>
        <item>Chapainawabganj</item>
        <item>Pabna</item>
        <item>Rajshahi</item>
        <item>Sirajgonj</item>
    </string-array>
    <string-array name="districts_of_rangpur">
        <item>Dinajpur</item>
        <item>Gaibandha</item>
        <item>Kurigram</item>
        <item>Lalmonirhat</item>
        <item>Nilphamari</item>
        <item>Panchagarh</item>
        <item>Rangpur</item>
        <item>Thakurgaon</item>
    </string-array>
    <string-array name="districts_of_sylhet">
        <item>Habiganj</item>
        <item>Moulvibazar</item>
        <item>Sunamganj</item>
        <item>Sylhet</item>
    </string-array>
    <string-array name="upazila_of_joypurhat">
        <item>Akkelpur</item>
        <item>Joypurhat Sadar</item>
        <item>Kalai</item>
        <item>Khetlal</item>
        <item>Panchbibi</item>
    </string-array>
    <string-array name="upazila_of_bogra">
        <item>Adamdighi</item>
        <item>Bogra Sadar</item>
        <item>Dhunat</item>
        <item>Dhupchanchia</item>
        <item>Gabtali</item>
        <item>Kahaloo</item>
        <item>Nandigram</item>
        <item>Sariakandi</item>
        <item>Shajahanpur</item>
        <item>Sherpur</item>
        <item>Shibganj</item>
        <item>Sonatola</item>
    </string-array>
    <string-array name="upazila_of_naogaon">
        <item>Atrai</item>
        <item>Badalgachhi</item>
        <item>Manda</item>
        <item>Dhamoirhat</item>
        <item>Mohadevpur</item>
        <item>Naogaon Sadar</item>
        <item>Niamatpur</item>
        <item>Patnitala</item>
        <item>Porsha</item>
        <item>Raninagar</item>
        <item>Sapahar</item>
    </string-array>
    <string-array name="upazila_of_natore">
        <item>Bagatipara</item>
        <item>Baraigram</item>
        <item>Gurudaspur</item>
        <item>Lalpur</item>
        <item>Natore Sadar</item>
        <item>Singra</item>
        <item>Naldanga</item>
    </string-array>
    <string-array name="upazila_of_nawabganj">
        <item>Bholahat</item>
        <item>Gomastapur</item>
        <item>Nachole</item>
        <item>Nawabganj Sadar</item>
        <item>Shibganj</item>
    </string-array>
    <string-array name="upazila_of_pabna">
        <item>Ataikula</item>
        <item>Atgharia</item>
        <item>Bera</item>
        <item>Bhangura</item>
        <item>Chatmohar</item>
        <item>Faridpur</item>
        <item>Ishwardi</item>
        <item>Pabna Sadar</item>
        <item>Santhia</item>
        <item>Sujanagar</item>
    </string-array>
    <string-array name="upazila_of_sirajganj">
        <item>Belkuchi</item>
        <item>Chauhali</item>
        <item>Kamarkhanda</item>
        <item>Kazipur</item>
        <item>Raiganj</item>
        <item>Shahjadpur</item>
        <item>Sirajganj Sadar</item>
        <item>Tarash</item>
        <item>Ullahpara</item>
    </string-array>
    <string-array name="upazila_of_rajshahi">
        <item>Bagha</item>
        <item>Bagmara</item>
        <item>Charghat</item>
        <item>Durgapur</item>
        <item>Godagari</item>
        <item>Mohanpur</item>
        <item>Paba</item>
        <item>Puthia</item>
        <item>Tanore</item>
    </string-array>
    <string-array name="upazila_of_dinajpur">
        <item>Birampur</item>
        <item>Birganj</item>
        <item>Biral</item>
        <item>Bochaganj</item>
        <item>Chirirbandar</item>
        <item>Phulbari</item>
        <item>Ghoraghat</item>
        <item>Hakimpur</item>
        <item>Kaharole</item>
        <item>Khansama</item>
        <item>Dinajpur Sadar</item>
        <item>Nawabganj</item>
        <item>Parbatipur</item>
    </string-array>
    <string-array name="upazila_of_gaibandha">
        <item>Phulchhari</item>
        <item>Gaibandha Sadar</item>
        <item>Gobindaganj</item>
        <item>Palashbari</item>
        <item>Sadullapur</item>
        <item>Sughatta</item>
        <item>Sundarganj</item>
    </string-array>
    <string-array name="upazila_of_kurigram">
        <item>Bhurungamari</item>
        <item>Char Rajibpur</item>
        <item>Chilmari</item>
        <item>Phulbari</item>
        <item>Kurigram Sadar</item>
        <item>Nageshwari</item>
        <item>Rajarhat</item>
        <item>Raomari</item>
        <item>Ulipur</item>
    </string-array>
    <string-array name="upazila_of_lalmonirhat">
        <item>Aditmari</item>
        <item>Hatibandha</item>
        <item>Kaliganj</item>
        <item>Lalmonirhat Sadar</item>
        <item>Patgram</item>
    </string-array>
    <string-array name="upazila_of_nilphamari">
        <item>Dimla</item>
        <item>Domar</item>
        <item>Jaldhaka</item>
        <item>Kishoreganj</item>
        <item>Nilphamari Sadar</item>
        <item>Saidpur</item>
    </string-array>
    <string-array name="upazila_of_panchagarh">
        <item>Atwari</item>
        <item>Boda</item>
        <item>Debiganj</item>
        <item>Panchagarh Sadar</item>
        <item>Tetulia</item>
    </string-array>
    <string-array name="upazila_of_rangpur">
        <item>Badarganj</item>
        <item>Gangachhara</item>
        <item>Kaunia</item>
        <item>Rangpur Sadar</item>
        <item>Mithapukur</item>
        <item>Pirgachha</item>
        <item>Pirganj</item>
        <item>Taraganj</item>
    </string-array>
    <string-array name="upazila_of_thakurgaon">
        <item>Baliadangi</item>
        <item>Haripur</item>
        <item>Pirganj</item>
        <item>Ranisankail</item>
        <item>Thakurgaon Sadar</item>
    </string-array>
    <string-array name="upazila_of_netrokona">
        <item>Atpara</item>
        <item>Barhatta</item>
        <item>Durgapur</item>
        <item>Khaliajuri</item>
        <item>Kalmakanda</item>
        <item>Kendua</item>
        <item>Madan</item>
        <item>Mohanganj</item>
        <item>Netrokona Sadar</item>
        <item>Purbadhala</item>
    </string-array>
    <string-array name="upazila_of_sherpur">
        <item>Jhenaigati</item>
        <item>Nakla</item>
        <item>Nalitabari</item>
        <item>Sherpur Sadar</item>
        <item>Sreebardi</item>
    </string-array>
    <string-array name="upazila_of_jamalpur">
        <item>Baksiganj</item>
        <item>Dewanganj</item>
        <item>Islampur</item>
        <item>Jamalpur Sadar</item>
        <item>Madarganj</item>
        <item>Melandaha</item>
        <item>Sarishabari</item>
    </string-array>
    <string-array name="upazila_of_mymensingh">
        <item>Bhaluka</item>
        <item>Dhobaura</item>
        <item>Fulbaria</item>
        <item>Gaffargaon</item>
        <item>Gauripur</item>
        <item>Haluaghat</item>
        <item>Ishwarganj</item>
        <item>Mymensingh Sadar</item>
        <item>Muktagachha</item>
        <item>Nandail</item>
        <item>Phulpur</item>
        <item>Trishal</item>
        <item>Tara Khanda</item>
    </string-array>
    <string-array name="upazila_of_barguna">
        <item>Amtali</item>
        <item>Bamna</item>
        <item>Barguna Sadar</item>
        <item>Betagi</item>
        <item>Patharghata</item>
        <item>Taltoli</item>
    </string-array>
    <string-array name="upazila_of_barisal">
        <item>Agailjhara</item>
        <item>Babuganj</item>
        <item>Bakerganj</item>
        <item>Banaripara</item>
        <item>Gaurnadi</item>
        <item>Hizla</item>
        <item>Barisal Sadar</item>
        <item>Mehendiganj</item>
        <item>Muladi</item>
        <item>Wazirpur</item>
    </string-array>
</resources>