<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".RegisterActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/icon"
            android:src="@drawable/bloodimage" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/gray" />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/toolbar"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_alignParentStart="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="@string/registater_form"
            android:textColor="@color/green"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userName"
            style="@style/EditTextStyle"
            android:hint="@string/user_name"
            android:maxLength="20" />

        <AutoCompleteTextView
            android:id="@+id/bloodGroup"
            style="@style/EditTextStyle"
            android:hint="@string/bloodgroup"
            android:maxLength="3" />

        <EditText
            android:id="@+id/phoneNumber"
            style="@style/EditTextStyle"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:maxLength="11" />

        <EditText
            android:id="@+id/emailAddress"
            style="@style/EditTextStyle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:maxLength="40" />

        <AutoCompleteTextView
            android:id="@+id/division"
            style="@style/EditTextStyle"
            android:hint="@string/division"
            android:maxLength="20" />

        <AutoCompleteTextView
            android:id="@+id/destrict"
            style="@style/EditTextStyle"
            android:hint="@string/district"
            android:maxLength="15" />

        <AutoCompleteTextView
            android:id="@+id/upozila"
            style="@style/EditTextStyle"
            android:hint="@string/Upazila"
            android:maxLength="15" />

        <EditText
            android:id="@+id/password"
            style="@style/EditTextStyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLength="11" />

        <EditText
            android:id="@+id/confirmPassword"
            style="@style/EditTextStyle"
            android:hint="@string/conferm_password"
            android:inputType="textPassword"
            android:maxLength="11" />


        <Button
            android:id="@+id/registerMe"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:background="#ddd"
            android:text="@string/register_me"
            android:textColor="@color/green"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>