<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    tools:context=".HomePageActivity">

    <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            style="@style/ButtonStyle"
            android:text="@string/why_donate_blood"
            android:id="@+id/inspiraion"/>
        <Button
            style="@style/ButtonStyle"
            android:text="@string/my_profile"
            android:id="@+id/my_profile"/>
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/last_donation"
            android:text="@string/last_donation_date"/>
        <Button
            style="@style/ButtonStyle"
            android:id="@+id/blood_search"
            android:text="@string/blood_needed"/>
    </LinearLayout>

    <TextView
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#666"
        android:gravity="center"
        android:text="@string/about_us"
        android:textSize="15sp"
        android:padding="0dp"/>

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toolbar">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/bloodimage"
            android:contentDescription="@string/icon" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/app_name"
            android:textColor="@color/gray"/>
    </android.support.v7.widget.Toolbar>


</RelativeLayout>