<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.team.speedcoders.bloodbank.BloodSearch">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <AutoCompleteTextView
            android:id="@+id/bloodGrouping"
            style="@style/EditTextStyle"
            android:layout_margin="20dp"
            android:hint="@string/bloodgroup" />

        <AutoCompleteTextView
            android:id="@+id/inDevision"
            style="@style/EditTextStyle"
            android:layout_margin="20dp"
            android:hint="@string/division_default_any" />

        <AutoCompleteTextView
            android:id="@+id/inDestrict"
            style="@style/EditTextStyle"
            android:layout_margin="20dp"
            android:hint="@string/district_deafault_any" />

        <AutoCompleteTextView
            android:id="@+id/inUpazila"
            style="@style/EditTextStyle"
            android:layout_margin="20dp"
            android:hint="@string/upazila_default_any" />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/search"
            android:textAllCaps="false"
            />
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toolbar">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/bloodimage"
            android:contentDescription="@string/icon" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/app_name"
            android:textColor="@color/gray"/>
    </android.support.v7.widget.Toolbar>


</RelativeLayout>
