<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/activity_horizontal_margin">

        <EditText
            style="@style/EditTextStyle"
            android:id="@+id/login_phone"
            android:inputType="phone"
            android:textSize="20sp"
            android:hint="@string/phone_number"/>

        <EditText
            android:id="@+id/login_password"
            style="@style/EditTextStyle"
            android:inputType="textPassword"
            android:textSize="20sp"
            android:hint="@string/password" />

        <Button
            style="@style/ButtonStyle"
            android:layout_margin="5dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:background="@color/green"
            android:id="@+id/login"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account_click"
                android:gravity="end"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up"
                android:layout_marginStart="3dp"
                android:textColor="@android:color/holo_red_dark"
                android:background="@android:color/transparent"
                android:textSize="20sp"/>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/toolbar">
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/bloodimage"
            android:contentDescription="@string/icon" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/app_name"
            android:textColor="@color/gray"/>
    </android.support.v7.widget.Toolbar>


</RelativeLayout>