<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:gravity="center"
        >

        <TextView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:id="@+id/profileName"/>

        <TextView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:id="@+id/profilePhone"/>

        <TextView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:text="@string/emailAddress"
            android:id="@+id/profileEmail"/>

        <TextView
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_height="wrap_content"
            android:text="@string/bloodgroupInfo"
            android:id="@+id/profileBloodgroup"/>

    </LinearLayout>

</RelativeLayout>